Nova/src/main/java/com/example/ProjectNova/Nova/Errors/UsernameAlreadyExistException.java
package com.example.ProjectNova.Nova.Errors;

import org.springframework.http.HttpStatus;
import org.springframework.web.bind.annotation.ResponseStatus;

@ResponseStatus(code = HttpStatus.BAD_REQUEST, reason = "Username already exist")
public class UsernameAlreadyExistException extends Exception {

}
